--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,21 @@
 <mat-toolbar color="primary">
-	<span>INFO5059 - {{ title }}</span>
-	<!-- This fills the remaining space of the current row -->
-	<span style="flex: 1 1 auto"></span>
-	<button mat-button [matMenuTriggerFor]="appMenu" align="end">
-	  <mat-icon>menu</mat-icon>
-	</button>
-  </mat-toolbar>
-   
-  <mat-menu #appMenu="matMenu">
-	<a mat-menu-item >Home</a>
-	<a mat-menu-item >Employees</a>
-  </mat-menu>
-  
-  <router-outlet></router-outlet>
-  
-  
+  <span>INFO5059 - {{ title }}</span>
+  <!-- This fills the remaining space of the current row -->
+  <span style="flex: 1 1 auto"></span>
+  <button mat-button [matMenuTriggerFor]="appMenu" align="end">
+    <mat-icon>menu</mat-icon>
+  </button>
+</mat-toolbar>
+
+<div align="center">
+  <img src="assets/catlogo.png" />
+</div>
+
+<mat-menu #appMenu="matMenu">
+  <a mat-menu-item [routerLink]="['home']" (click)="setTitle('Home')">Home</a>
+  <a mat-menu-item [routerLink]="['vendors']" (click)="setTitle('Vendors')"
+    >Vendors</a
+  >
+</mat-menu>
+
+<router-outlet></router-outlet>
