--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,24 +9,35 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 @import "./custom-theme.scss";
 
 .my-primary-text {
-  color: mat.m2-get-color-from-palette($my-primary);
+	color: mat.m2-get-color-from-palette($my-primary);
 }
 
 .my-acent-text {
-  color: mat.m2-get-color-from-palette($my-accent);
+	color: mat.m2-get-color-from-palette($my-accent);
 }
 
 .margin-right-2 {
-  margin-right: 2vw !important;
+	margin-right: 2vw !important;
 }
 
 .margin-top-5 {
-  margin-top: 5vh !important;
+	margin-top: 5vh !important;
 }
 
+.padtop15 {
+	padding-top: 15vh;
+	} 
+
 mat-list-item:nth-child(odd){
-  background-color:white;
+	background-color:white;
  }
  mat-list-item:nth-child(even) {
-  background-color:#eeeeee;
+	background-color:#eeeeee;
  }
+ .material-icons.addicon {
+	font-size: 15vw;
+	position: absolute;
+	bottom: 5vh;
+	right: 5vw;
+	padding: 10vw;
+}
