lab8 - added most of the product functionality. Needs full validation and testing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,9 @@
   <a mat-menu-item [routerLink]="['vendors']" (click)="setTitle('Vendors')"
     >Vendors</a
   >
+  <a mat-menu-item [routerLink]="['products']" (click)="setTitle('Products')"
+    >Products</a
+  >
 </mat-menu>
 
 <router-outlet></router-outlet>
