lab10 - generator code

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,9 @@
   <a mat-menu-item [routerLink]="['products']" (click)="setTitle('Products')"
     >Products</a
   >
+  <a mat-menu-item [routerLink]="['generator']" (click)="setTitle('Generator')"
+    >Generator</a
+  >
 </mat-menu>
 
 <router-outlet></router-outlet>
