--- a/src/styles.scss
+++ b/src/styles.scss
@@ -55,3 +55,23 @@ mat-error {
 		right: 15vw;
 	}
 }
+
+.customdialog .mat-mdc-dialog-title.mat-mdc-dialog-title { 
+	color: mat.m2-get-color-from-palette($my-primary); 
+} 
+
+.customdialog .mat-mdc-dialog-content.mat-mdc-dialog-content { 
+	color: mat.m2-get-color-from-palette($my-primary); 
+} 
+
+#deleteNo, #deleteYes { 
+	background-color: mat.m2-get-color-from-palette($my-primary); 
+	color: white; 
+	font-size: x-large; 
+	padding: 1vh; 
+	margin: 1vw; 
+} 
+
+#deleteCancel { 
+	background-color: white; border: none; padding-top: 2vh; padding-left:5vw; 
+} 
