lab13 - implemented delete dialog for products

--- a/src/app/product/product-detail/product-detail.component.html
+++ b/src/app/product/product-detail/product-detail.component.html
@@ -174,7 +174,7 @@
 	
 	<span>
 		<button *ngIf="selectedProduct.id"  mat-raised-button type="button"
-				(click)="deleteProduct(selectedProduct)">Delete</button>
+				(click)="openDeletedialog()">Delete</button>
 	</span>
 	<span>
 	<button mat-raised-button type="button" (click)="cancelled.emit(selectedProduct)">
