lab17 - adding po viewer functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,15 +13,10 @@
 
 <mat-menu #appMenu="matMenu">
   <a mat-menu-item [routerLink]="['home']" (click)="setTitle('Home')">Home</a>
-  <a mat-menu-item [routerLink]="['vendors']" (click)="setTitle('Vendors')"
-    >Vendors</a
-  >
-  <a mat-menu-item [routerLink]="['products']" (click)="setTitle('Products')"
-    >Products</a
-  >
-  <a mat-menu-item [routerLink]="['generator']" (click)="setTitle('Generator')"
-    >Generator</a
-  >
+  <a mat-menu-item [routerLink]="['vendors']" (click)="setTitle('Vendors')">Vendors</a>
+  <a mat-menu-item [routerLink]="['products']" (click)="setTitle('Products')">Products</a>
+  <a mat-menu-item [routerLink]="['generator']" (click)="setTitle('Generator')">Generator</a>
+  <a mat-menu-item [routerLink]="['viewer']" (click)="setTitle('Viewer')">Viewer</a>
 </mat-menu>
 
 <router-outlet></router-outlet>
